<resources>
    <string name="app_name">I-GW</string>
    <string name="login_title">I-GW</string>
    <string name="check_locale">中/en</string>
    <string name="login_mode_pwd_acccent">账号密码登录</string>
    <string name="login_email_hint">邮箱</string>
    <string name="login_code_hint">验证码</string>
    <string name="login_send_code">发送验证码</string>
    <string name="login_mode_email_acccent">邮箱验证登录</string>
    <string name="login_pwd_hint">密码</string>
    <string name="login_account_hint">账号</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="login_submit">登录</string>
    <string name="login_register">注册</string>
    <string name="nationality">国籍</string>
    <string name="nationality_explain">请选择您得国籍</string>
    <string name="city">所在城市</string>
    <string name="city_explain">请选择您所在得城市</string>
    <string name="surname">姓</string>
    <string name="surname_explain">请输入您得姓</string>
    <string name="lastname">名</string>
    <string name="lastname_explain">请输入您得名</string>
    <string name="gender">性别</string>
    <string name="gender_explain">请选择您的性别</string>
    <string name="birth">出生年月</string>
    <string name="birth_explain">请选择年月日</string>
    <string name="nickname">昵称</string>
    <string name="nickname_explain">请输入您得昵称</string>
    <string name="organization_or_school">机构/学校名称</string>
    <string name="organization_or_school_explain">请输入您的机构或者学校名称</string>
    <string name="self_introduction">自我介绍</string>
    <string name="self_introduction_explain">请输入您的自我介绍</string>
    <string name="email">email</string>
    <string name="email_explain">请输入您的电子邮箱</string>
    <string name="phone_number">手机号码</string>
    <string name="phone_number_explain">请出入您得手机号码</string>
    <string name="password">登录密码</string>
    <string name="password_explain">请输入您得登录密码</string>
    <string name="password_again">再次输入密码</string>
    <string name="password_again_explain">请再次输入您得密码</string>
    <string name="invitation_code">邀请码</string>
    <string name="invitation_code_explain">请输入您的邀请码</string>
    <string name="head_icon">个人照片</string>
    <string name="warning_nationality">请输入您的国籍</string>
    <string name="warning_city">请选择城市</string>
    <string name="warning_explain">请输入您的姓</string>
    <string name="warning_lastname_explain">请输入您的名</string>
    <string name="select_headimage">请重新选择头像</string>
    <string name="check_user_agreement">请先勾选用户协议</string>
    <string name="please_input_accent">请输入账号</string>
    <string name="please_input_pwd">请输入密码</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="please_input_code">请输入验证码</string>
    <string name="hint_original_pwd">"请输入原始密码 "</string>
    <string name="hint_new_pwd">"请输入新密码 "</string>
    <string name="hint_new_pwd_again">请再次输入新密码</string>
    <string name="update_btn_text">"提交 "</string>
    <string name="warning_input_original_pwd">原始密码不能为空</string>
    <string name="warning_input_new_pwd">新密码不能为空</string>
    <string name="warning_input_new_pwd_again">密码不能为空</string>
    <string name="waring_password_inconsistency">两次密码输入不一致</string>
    <string name="hint_verify_code">发送验证码</string>
    <string name="hint_input_regiest_email">请输入注册时的邮箱</string>
    <string name="hint_input_verify_code">验证码</string>
    <string name="hint_reset_new_pwd">新密码</string>
    <string name="hint_reset_new_pwd_again">请再次确认密码</string>
    <string name="submit_reset">重置密码</string>
    <string name="verify_not_empty">"验证码不能为空 "</string>
    <string name="toast_update_pwd_success">修改成功</string>
    <string name="reset_pwd_success">重置密码成功</string>
    <string name="submit_update_userinfo">提交修改</string>
    <string name="title_update_userinfo">个人资料修改</string>
    <string name="help_feedback_title">您需要反馈的问题</string>
    <string name="help_hot_question">热点问题</string>
    <string name="hint_help_input_question">"请输入您需要反馈的问题"</string>
    <string name="title_help_feedback">帮助与反馈</string>
    <string name="welcome_text">开启您的美好交流之旅</string>
    <string name="item_loading">加载中...</string>
    <string name="item_loading_fail">加载失败, 点击重试</string>
    <string name="item_loading_end">加载完成</string>
    <string name="success_feedbback">反馈成功</string>
    <string name="fail_feedback">提交反馈失败</string>
    <string name="please_input_feedback">请输入您要反馈的内容</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="title_help_detail">帮助详情</string>
    <string name="message_center">消息中心</string>
    <string name="tv_mark_readed">标记已读</string>
    <string name="msg_button_refuse">拒绝</string>
    <string name="msg_button_agree">同意</string>
    <string name="link_title">标题</string>
    <string name="link_hint_title">请输入交流的标题题目</string>
    <string name="link_content">"内容: "</string>
    <string name="link_hint_content">请输入交流的内容</string>
    <string name="link_userinfo">联系人信息</string>
    <string name="link_name_title">姓名:</string>
    <string name="link_hint_username">请输入本人姓名</string>
    <string name="link_phone_title">电话:</string>
    <string name="link_hint_user_phone">请输入本人联系方式</string>
    <string name="link_user_email_title">email:</string>
    <string name="link_hint_user_email">请输入本人email</string>
    <string name="link_hint_user_other">关于联系的其他说明内容</string>
    <string name="link_user_other_title">其他</string>
    <string name="submit_link">提交</string>
    <string name="share_link_title">交流联系</string>
    <string name="register_title">用户注册</string>
    <string name="update_pwd_title">修改密码</string>
    <string name="reset_pwd_title">重置密码</string>
    <string name="not_login_in">登录</string>
    <string name="warning_not_input_password">密码不能为空</string>
    <string name="warning_two_password_not_same">两次输入密码不一致</string>
    <string name="hint_search">搜索好友</string>
    <string name="bg_friends_recent_chat">最近聊天</string>
    <string name="bg_friends_businessusers_chat">商务用户</string>
    <string name="bg_friends_ordinaryusers_chat">普通用户</string>
    <string name="title_my_friends_list">我的好友</string>
    <string name="bg_friends_businessusers_chating">商务聊天室</string>
    <string name="hint_chattype_public_chating">公共聊天室</string>
    <string name="bg_chattype_recent_chat">最近聊天</string>
    <string name="title_chat_type">双语聊天城</string>
    <string name="title_recent_chat">最近聊天</string>
    <string name="login_success">登录成功</string>
    <string name="componyinfo_city_name">"城市: "</string>
    <string name="componyinfo_name">名称:</string>
    <string name="intro">"简介: "</string>
    <string name="componyinfo_city_title">城市展台</string>
    <string name="company_label">"标签: "</string>
    <string name="friend_note">好友备注</string>
    <string name="person_organization_or_school">所属机构/ 学校</string>
    <string name="individual_resume">个人简介</string>
    <string name="del_friend">删除好友</string>
    <string name="send_message">发送消息</string>
    <string name="RMB">人民币</string>
    <string name="dollar">美元</string>
    <string name="recharge">充值</string>
    <string name="my_friend">我的好友</string>
    <string name="Update_personal_data">个人资料修改</string>
    <string name="update_password">密码修改</string>
    <string name="Version_update">版本更新</string>
    <string name="about">关于</string>
    <string name="help_feedback">帮助与反馈</string>
    <string name="login_out">退出登录</string>
    <string name="city_information">城市信息</string>
    <string name="business_cooperation">商务合作</string>
    <string name="skip">跳过</string>
    <string name="loading_login">登录中...</string>
    <string name="beijing">北京</string>
    <string name="cancel">取消</string>
    <string name="complete">完成</string>
    <string name="communication_title">标题:</string>
    <string name="communication_title_hint">请输入交流的标题题目</string>
    <string name="communication_content">内容：</string>
    <string name="communication_content_hint">请输入交流的内容</string>
    <string name="communicaion_contact_information">联系人信息</string>
    <string name="communication_name">姓名：</string>
    <string name="communication_name_hint">请输入本人姓名</string>
    <string name="communication_phone">电话：</string>
    <string name="communication_phone_hint">请输入本人联系方式</string>
    <string name="communication_email_hint">请输入本人email</string>
    <string name="communication_others">其它：</string>
    <string name="communication_ohters_hint">关于联系的其它说明内容</string>
    <string name="submit">提交</string>
    <string name="toast_input_exchange">请输入交流的标题题目</string>
    <string name="toast_input_content">请输入交流的内容</string>
    <string name="toast_input_name">请输入本人姓名</string>
    <string name="toast_input_phone">请输入本人联系方式</string>
    <string name="toast_input_email">请输入本人email</string>
    <string name="user_agreement">我同意《i-gw用户协议》</string>
    <string name="select_photo_album">从相册选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="data_sure">确认</string>
    <string name="register_now">立即注册</string>
    <string name="no_add_self">不能添加自己</string>
    <string name="toast_no_login">未登陆, 请先登陆</string>
    <string name="operation_successful">操作成功</string>
    <string name="chatroomusers_myself">当前为本人</string>
    <string name="comfirm">确认</string>
    <string name="title_login_out">退出登录</string>
    <string name="content_login_out">"确定退出? "</string>
    <string name="commit_login_out">退出登录</string>
    <string name="verify_code_sended">验证码已发送</string>
    <string name="member_of_public_chat_room">Member of public chat room</string>
    <string name="banned">禁言</string>
    <string name="unbannned">解除禁言</string>
    <string name="add_friend">加好友</string>
    <string name="administrator">管理员</string>
    <string name="title_about">关于我们</string>
    <string name="title_about_activity">关于我们</string>

</resources>
