<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".modoule.city.view.ShareLinkActivity">



    <include layout="@layout/common_status_bar"/>

    <View
        android:background="@color/grey_line_ffcccccc"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">


            <LinearLayout
                android:paddingBottom="18dp"
                android:paddingTop="20.5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_link_title"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_title"
                    android:textColor="@color/color333" />


            </LinearLayout>


            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>

            <LinearLayout
                android:paddingTop="21dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="206.5dp">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_content"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>


                <EditText
                    android:id="@+id/et_link_content"
                    android:gravity="left"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_content"
                    android:textColor="@color/color333" />

            </LinearLayout>

            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>


            <TextView
                android:gravity="center_vertical"
                android:textSize="12sp"
                android:textColor="@color/color333"
                android:text="@string/link_userinfo"
                android:background="@color/grey_eeeeee"
                android:layout_width="match_parent"
                android:layout_height="29dp" />


            <LinearLayout
                android:paddingBottom="18dp"
                android:paddingTop="20.5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_name_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_user_name"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_username"
                    android:textColor="@color/color333" />

            </LinearLayout>

            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>


            <LinearLayout
                android:paddingBottom="18dp"
                android:paddingTop="20.5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_phone_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_link_phone"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_user_phone"
                    android:textColor="@color/color333" />


            </LinearLayout>

            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>



            <LinearLayout
                android:paddingBottom="18dp"
                android:paddingTop="20.5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_user_email_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_link_email"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_user_email"
                    android:textColor="@color/color333" />


            </LinearLayout>

            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>



            <LinearLayout
                android:paddingBottom="18dp"
                android:paddingTop="20.5dp"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:layout_height="wrap_content">


                <TextView
                    android:textColor="@color/color333"
                    android:textSize="14sp"
                    android:text="@string/link_user_other_title"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"/>

                <EditText
                    android:id="@+id/et_link_other"
                    android:textSize="14sp"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:hint="@string/link_hint_user_other"
                    android:textColor="@color/color333" />


            </LinearLayout>
            <View
                android:background="@color/grey_line_ffcccccc"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"/>



            <Button
                android:layout_marginBottom="17.5dp"
                android:id="@+id/btn_submit"
                android:layout_width="289dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="45.5dp"
                android:background="@drawable/bg_login_submit"
                android:text="@string/submit_link"
                android:textColor="@color/white"
                android:textSize="14sp" />



        </LinearLayout>

    </ScrollView>

</LinearLayout>