<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modoule.login.view.ResetPasswordActivity">


    <include layout="@layout/common_status_bar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="22.5dp"
        android:paddingTop="31.5dp"
        android:paddingEnd="22.5dp">


        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:background="@drawable/bg_update_pwd_input"
            android:drawableLeft="@drawable/mailbox"
            android:drawablePadding="19.5dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_input_regiest_email"
            android:maxLines="1"
            android:paddingStart="19.5dp"
            android:textColor="@color/black_000000"
            android:textSize="14sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_update_pwd_input"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_verify_code"
                android:layout_width="237.5dp"
                android:layout_height="match_parent"
                android:background="@null"
                android:drawableStart="@drawable/captcha"
                android:drawablePadding="19.5dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_input_verify_code"
                android:maxLines="1"
                android:paddingStart="19.5dp"
                android:textColor="@color/black_000000"
                android:textSize="14sp" />


            <View
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@color/color_line" />


            <TextView
                android:id="@+id/tv_send_code"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/hint_verify_code"
                android:textColor="@color/black_000000" />

        </LinearLayout>


        <EditText
            android:id="@+id/et_new_pwd"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_update_pwd_input"
            android:drawableLeft="@drawable/pwd_icon"
            android:drawablePadding="19.5dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_reset_new_pwd"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="19.5dp"
            android:textColor="@color/black_000000"
            android:textSize="14sp" />


        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="14dp"
            android:background="@drawable/bg_update_pwd_input"
            android:drawableLeft="@drawable/pwd_icon"
            android:drawablePadding="19.5dp"
            android:gravity="center_vertical"
            android:hint="@string/hint_reset_new_pwd_again"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingStart="19.5dp"
            android:textColor="@color/black_000000"
            android:textSize="14sp" />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="289dp"
            android:layout_height="39dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="170dp"
            android:background="@drawable/bg_btn_submit"
            android:text="@string/submit_reset"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>