<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F2F2F2"
    android:orientation="vertical"
    tools:context=".modoule.abouthelp.view.FeedbackOrHelpActivity">


    <include layout="@layout/common_status_bar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10.5dp"
                android:paddingTop="8.5dp"
                android:paddingBottom="6dp"
                android:text="@string/help_hot_question"
                android:textColor="@color/black_666666"
                android:textSize="10sp" />


            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_help_list"
                android:layout_width="match_parent"
                android:layout_height="196dp"
                android:background="@color/white" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10.5dp"
                android:paddingTop="12dp"
                android:paddingBottom="6.5dp"
                android:text="@string/help_feedback_title"
                android:textSize="10sp" />


            <EditText
                android:id="@+id/et_question"
                android:layout_width="match_parent"
                android:layout_height="277dp"
                android:background="@color/white"
                android:gravity="left"
                android:hint="@string/hint_help_input_question"
                android:paddingStart="10dp"
                android:paddingTop="15.5dp"
                android:paddingEnd="10dp"
                android:paddingBottom="15.5dp"
                android:textSize="12sp" />


            <Button
                android:id="@+id/btn_submit"
                android:layout_width="289dp"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="19.5dp"
                android:layout_marginBottom="17.5dp"
                android:background="@drawable/bg_btn_submit"
                android:text="@string/submit_feedback"
                android:textColor="@color/white" />


        </LinearLayout>


    </ScrollView>

</LinearLayout>