<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_map"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/ll_choice_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button

            android:id="@+id/btn_choice_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@drawable/bg_btn_bottom_popwindow"
            android:text="@string/select_photo_album"
            android:textColor="@color/black_000000"
            android:textSize="15sp" />
        <View
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginStart="@dimen/dp_16"
            android:background="@color/material_grey_line_200"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <Button
            android:id="@+id/btn_choice_two"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_7"
            android:background="@drawable/bg_btn_bottom_popwindow"
            android:text="@string/take_photo"
            android:textColor="@color/black_000000"
            android:textSize="15sp" />


        <Button

            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginEnd="@dimen/dp_16"
            android:layout_marginBottom="@dimen/dp_16"
            android:background="@drawable/bg_btn_bottom_popwindow"
            android:text="@string/cancel"
            android:textColor="@color/black_000000"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>