<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".modoule.login.view.UpdateActivity">


    <include layout="@layout/common_status_bar" />

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/bg_fff2f2f2"
            android:orientation="vertical"
            android:paddingStart="22.5dp"
            android:paddingTop="31.5dp"
            android:paddingEnd="22.5dp">


        <EditText
                android:id="@+id/et_original_pwd"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:background="@drawable/bg_update_pwd_input"
                android:drawableLeft="@drawable/pwd_icon"
                android:drawablePadding="19.5dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_original_pwd"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="19.5dp"
                android:textColor="@color/black_000000"
                android:textSize="14sp" />


        <EditText
                android:id="@+id/et_new_pwd"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_update_pwd_input"
                android:drawableStart="@drawable/pwd_icon"
                android:drawablePadding="19.5dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_new_pwd"
                android:inputType="textPassword"

                android:maxLines="1"
                android:paddingStart="19.5dp"
                android:textColor="@color/black_000000"
                android:textSize="14sp"

                />


        <EditText
                android:id="@+id/et_new_pwd_again"
                android:layout_width="match_parent"
                android:layout_height="49dp"
                android:layout_marginTop="14dp"
                android:background="@drawable/bg_update_pwd_input"
                android:drawableStart="@drawable/pwd_icon"
                android:drawablePadding="19.5dp"
                android:gravity="center_vertical"
                android:hint="@string/hint_new_pwd_again"

                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="19.5dp"
                android:textColor="@color/black_000000"
                android:textSize="14sp" />


        <Button
                android:id="@+id/btn_submit"
                android:layout_width="289dp"
                android:layout_height="39dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="112dp"
                android:background="@drawable/bg_btn_submit"
                android:text="@string/update_btn_text"
                android:textColor="@color/white" />

    </LinearLayout>


</LinearLayout>