<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".modoule.im.view.ChatTypeActivity">



    <include layout="@layout/common_status_bar"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/ll_business_chat"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.5dp"
                android:background="@drawable/businessusers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.5dp"
                android:text="@string/bg_friends_businessusers_chating"
                android:textColor="@color/color333"
                android:textSize="14sp" />


        </LinearLayout>
        <include layout="@layout/default_line"/>

        <LinearLayout
            android:id="@+id/ll_public_chat"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.5dp"
                android:background="@drawable/businessusers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.5dp"
                android:text="@string/hint_chattype_public_chating"
                android:textColor="@color/color333"
                android:textSize="14sp" />


        </LinearLayout>


        <include layout="@layout/default_line"/>


        <LinearLayout
            android:id="@+id/ll_recent_chat"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10.5dp"
                android:background="@drawable/businessusers" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12.5dp"
                android:text="@string/bg_chattype_recent_chat"
                android:textColor="@color/color333"
                android:textSize="14sp" />


        </LinearLayout>

        <include layout="@layout/default_line"/>
    </LinearLayout>
</LinearLayout>

